# Linux_Command_Pro

./: .clang-fotmat  .gitignore  CMakeLists.txt  LICENSE  README.md  README_EN.md  build.sh  run_tests.sh  todo.txt.txt
docs/: contributing.md  contributing_EN.md  development.md  development_EN.md  examples.md  examples_EN.md  features.md  installation.md  structure.md  structure_EN.md  usage.md
dsa/: dsa.c
example/: test.c
flow/: CMakeLists.txt  flow.c  flow.h  flow_content.c  flow_content.h  flow_emoji.c  flow_emoji.h  flow_formatter.c  flow_html.c  flow_html.h  flow_parser.c  flow_renderer.c  flow_syntax_highlighter.c  flow_syntax_highlighter.h  flow_url.c  flow_utils.c
grapher/: CMakeLists.txt  grapher.c  grapher_advanced.c  grapher_advanced.h
histroy/: CMakeLists.txt
include/: common.h
loop/: CMakeLists.txt  loop.c  loop.h  loop_animation.c  loop_utils.c
pawk/: CMakeLists.txt  README.md  pawk.cpp
pawk/include/: Action.h  AwkEngine.h  BuiltinFunctions.h  CommandLineParser.h  Constants.h  Field.h  Pattern.h  Record.h  Utils.h  Variables.h
pawk/src/: Action.cpp  AwkEngine.cpp  BuiltinFunctions.cpp  CommandLineParser.cpp  Field.cpp  Pattern.cpp  Record.cpp  Utils.cpp  Variables.cpp  pawk_new.cpp
pbc/: CMakeLists.txt  pbc.c
pcal/: CMakeLists.txt  pcal.c
pcat/: CMakeLists.txt  pcat.c
pcp/: CMakeLists.txt  pcp.c
pcpu/: CMakeLists.txt  pcpu.c
pcut/: CMakeLists.txt  pcut.c
pdate/: CMakeLists.txt  pdate.c
pdf/: CMakeLists.txt  pdf.c
pdiff/: CMakeLists.txt  pdiff.c
pdu/: CMakeLists.txt  pdu.c
pecho/: CMakeLists.txt  pecho.c
pfind/: CMakeLists.txt  pfind.c
pfree/: CMakeLists.txt  pfree.c
pget/: CMakeLists.txt  pget.c
pgrep/: CMakeLists.txt  pgrep.c
phead/: CMakeLists.txt  phead.c
phistory/: CMakeLists.txt  phistory.c
pjoin/: CMakeLists.txt  pjoin.c
pkill/: CMakeLists.txt  pkill.c
pls/: CMakeLists.txt  pls.c
pman/: CMakeLists.txt  pman.c
pmkdir/: CMakeLists.txt  pmkdir.c
pmount/: CMakeLists.txt  pmount.c
pmv/: CMakeLists.txt  pmv.c
pnetstat/: CMakeLists.txt  pnetstat.c
pps/: CMakeLists.txt  pps.c
prm/: CMakeLists.txt  prm.c
psed/: CMakeLists.txt  psed.cpp
pseq/: CMakeLists.txt  pseq.c
pshuf/: CMakeLists.txt  pshuf.c
psort/: CMakeLists.txt  psort.c
psplit/: CMakeLists.txt  psplit.c
ptail/: CMakeLists.txt  ptail.c
ptar/: CMakeLists.txt  ptar.c
ptee/: CMakeLists.txt  ptee.c
ptop/: CMakeLists.txt  ptop.c
ptouch/: CMakeLists.txt  ptouch.c
puniq/: CMakeLists.txt  puniq.c
puptime/: CMakeLists.txt  puptime.c
pvim/: CMakeLists.txt
pvim/include/: Buffer.h  CommandMode.h  Config.h  Editor.h  FileManager.h  InsertMode.h  KeyHandler.h  PluginManager.h  SearchEngine.h  StatusBar.h  SyntaxHighlighter.h  TextProcessor.h  UndoManager.h  VisualMode.h  Window.h
pvim/modules/: PluginManager.cpp  SearchEngine.cpp  TextProcessor.cpp  UndoManager.cpp
pvim/src/: Buffer.cpp  CommandMode.cpp  Config.cpp  Editor.cpp  FileManager.cpp  InsertMode.cpp  KeyHandler.cpp  StatusBar.cpp  SyntaxHighlighter.cpp  VisualMode.cpp  Window.cpp  pvim.cpp
pw/: CMakeLists.txt  pw.c
pwc/: CMakeLists.txt  pwc.c
pwhatis/: CMakeLists.txt  pwhatis.c
pwhereis/: CMakeLists.txt  pwhereis.c
pwhich/: CMakeLists.txt  pwhich.c
pwho/: CMakeLists.txt  pwho.c
pyes/: CMakeLists.txt  pyes.c
pzip/: CMakeLists.txt  pzip.c
src/: common.c
test/: CMakeLists.txt  test_common.cpp  test_pcat.cpp  test_pgrep.cpp  test_pls.cpp
